# mfe-toolbox-python-msci-szp3c2

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  publish.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
infrastructure/scripts/: build_packages.sh  install_dependencies.sh  run_tests.sh
src/backend/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/benchmarks/: __init__.py  benchmark_arma.py  benchmark_bootstrap.py  benchmark_garch.py  benchmark_numba.py  benchmark_realized.py
src/backend/docs/: index.rst  installation.rst
src/backend/docs/api/: core.rst  index.rst  models.rst  utils.rst
src/backend/docs/examples/: arma_example.py  bootstrap_example.py  custom_distribution_example.py  garch_example.py  multivariate_example.py  realized_volatility_example.py
src/backend/docs/tutorials/: arma_models.rst  garch_models.rst  getting_started.rst  high_frequency.rst  multivariate_models.rst
src/backend/examples/: __init__.py  arma_modeling.py  bootstrap_analysis.py  custom_distribution.py  data_handling.py  multivariate_volatility.py  realized_measures.py
src/backend/mfe/: __init__.py  initialize.py
src/backend/mfe/core/: __init__.py  bootstrap.py  cross_section.py  distributions.py  optimization.py  testing.py
src/backend/mfe/models/: __init__.py  agarch.py  aparch.py  arma.py  armax.py  bekk.py  ccc.py  dcc.py  egarch.py  figarch.py  garch.py  igarch.py  multivariate.py  realized.py  tarch.py  volatility.py
src/backend/mfe/utils/: __init__.py  async_helpers.py  data_handling.py  numba_helpers.py  numpy_helpers.py  pandas_helpers.py  printing.py  statsmodels_helpers.py  validation.py
src/backend/scripts/: build_package.py  run_benchmarks.py  setup_test_env.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_core/: __init__.py  test_bootstrap.py  test_cross_section.py  test_distributions.py  test_optimization.py  test_testing.py
src/backend/tests/test_models/: __init__.py  test_arma.py  test_garch.py  test_multivariate.py  test_realized.py  test_volatility.py
src/backend/tests/test_utils/: __init__.py  test_async_helpers.py  test_data_handling.py  test_numba_helpers.py  test_printing.py  test_validation.py
src/web/: README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.py
src/web/docs/: async_operations.md  components.md  plots.md  ui_guide.md
src/web/examples/: __init__.py  arma_interface_example.py  async_operation_example.py  basic_gui_usage.py  custom_plot_example.py  garch_interface_example.py  latex_equation_example.py  responsive_ui_example.py
src/web/mfe/: __init__.py
src/web/mfe/ui/: __init__.py  about_dialog.py  armax_viewer.py  close_dialog.py  dialogs.py  latex_renderer.py  main_window.py  plot_widgets.py  resources.py  styles.py  visualization.py  widgets.py
src/web/mfe/ui/assets/: __init__.py
src/web/mfe/ui/async/: __init__.py  signals.py  task_manager.py  worker.py
src/web/mfe/ui/components/: __init__.py  diagnostic_panel.py  error_display.py  model_equation.py  navigation_bar.py  parameter_table.py  progress_indicator.py  result_summary.py  statistical_metrics.py
src/web/mfe/ui/models/: __init__.py  arma_view.py  bootstrap_view.py  distribution_view.py  garch_view.py  multivariate_view.py  realized_view.py  test_view.py  univariate_view.py
src/web/mfe/ui/plots/: __init__.py  acf_plot.py  density_plot.py  matplotlib_backend.py  pacf_plot.py  qq_plot.py  residual_plot.py  time_series_plot.py  volatility_plot.py
src/web/tests/: __init__.py  conftest.py
src/web/tests/test_ui/: __init__.py  test_armax_viewer.py  test_dialogs.py  test_latex_renderer.py  test_main_window.py  test_plot_widgets.py  test_widgets.py
src/web/tests/test_ui/test_async/: __init__.py  test_task_manager.py  test_worker.py
src/web/tests/test_ui/test_components/: __init__.py  test_diagnostic_panel.py  test_model_equation.py  test_parameter_table.py
src/web/tests/test_ui/test_models/: __init__.py  test_arma_view.py  test_garch_view.py  test_multivariate_view.py
src/web/tests/test_ui/test_plots/: __init__.py  test_acf_plot.py  test_pacf_plot.py  test_residual_plot.py
