[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfe-toolbox-ui"
version = "4.0.0"
description = "Python-based GUI for the MFE (MATLAB Financial Econometrics) Toolbox"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Kevin Sheppard", email = "kevin.sheppard@example.com"}
]
maintainers = [
    {name = "MFE Toolbox Team", email = "maintainers@mfetoolbox.example.com"}
]
keywords = ["econometrics", "finance", "statistics", "GUI", "time-series"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt6>=6.6.1",
    "matplotlib>=3.7.0",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "scipy>=1.11.4",
    "statsmodels>=0.14.1",
    "numba>=0.59.0",
]

[project.urls]
"Homepage" = "https://www.mfetoolbox.example.com"
"Documentation" = "https://docs.mfetoolbox.example.com"
"Source" = "https://github.com/example/mfe-toolbox"
"Bug Tracker" = "https://github.com/example/mfe-toolbox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.5.1",
    "hypothesis>=6.92.1",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mfe.ui"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers -v"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["PyQt6.*", "matplotlib.*"]
ignore_missing_imports = true